# dcpu-cc

./: .gitignore  ASTClasses.txt  ASTclassesDoc.txt  CMakeLists.txt  Compiler.cpp  Compiler.h  DTCC2Tests.kdev4  Lists.txt  README.md  TODO.txt  lexer.l  main.cpp  parser.y
astnodes/: CMakeLists.txt  FunctionDefinition.cpp  FunctionDefinition.h  Node.h  Program.cpp  Program.h  allnodes.h
astnodes/declaration/: ArrayDeclarator.cpp  ArrayDeclarator.h  CMakeLists.txt  Declaration.cpp  Declaration.h  DeclarationSpecifiers.h  Declarations.h  Declarator.cpp  Declarator.h  Declarators.h  EnumSpecifier.cpp  EnumSpecifier.h  Enumerator.cpp  Enumerator.h  Enumerators.h  ExternalDeclaration.h  ExternalDeclarations.h  FunctionDeclarator.cpp  FunctionDeclarator.h  IdentifierDeclarator.cpp  IdentifierDeclarator.h  NoIdentifierDeclarator.cpp  NoIdentifierDeclarator.h  ParameterDeclarations.h  Pointer.cpp  Pointer.h  Pointers.h  StorageSpecifier.cpp  StorageSpecifier.h  StructMemberDeclarator.cpp  StructMemberDeclarator.h  StructUnionSpecifier.cpp  StructUnionSpecifier.h  TypeBaseSpecifier.cpp  TypeBaseSpecifier.h  TypeName.cpp  TypeName.h  TypeNameSpecifier.cpp  TypeNameSpecifier.h  TypeQualifier.cpp  (+4 more)
astnodes/expression/: AddressOfOperator.cpp  AddressOfOperator.h  ArrayAccessOperator.cpp  ArrayAccessOperator.h  AssignmentOperator.cpp  AssignmentOperator.h  BinaryOperator.cpp  BinaryOperator.h  CMakeLists.txt  ChainExpressions.cpp  ChainExpressions.h  ConditionalOperator.cpp  ConditionalOperator.h  DerefOperator.cpp  DerefOperator.h  ExplicitCastOperator.cpp  ExplicitCastOperator.h  Expression.cpp  Expression.h  Expressions.h  Identifier.cpp  Identifier.h  MethodCall.cpp  MethodCall.h  PostIncDec.cpp  PostIncDec.h  PreIncDec.cpp  PreIncDec.h  SizeOfOperator.cpp  SizeOfOperator.h  StructureResolutionOperator.cpp  StructureResolutionOperator.h  TypeConversionOperator.cpp  TypeConversionOperator.h  UnaryOperator.cpp  UnaryOperator.h
astnodes/expression/literals/: CharacterLiteral.cpp  CharacterLiteral.h  DoubleLiteral.cpp  DoubleLiteral.h  FloatLiteral.cpp  FloatLiteral.h  LongDoubleLiteral.cpp  LongDoubleLiteral.h  SignedIntLiteral.cpp  SignedIntLiteral.h  SignedLongLiteral.cpp  SignedLongLiteral.h  StringLiteral.cpp  StringLiteral.h  UnsignedIntLiteral.cpp  UnsignedIntLiteral.h  UnsignedLongLiteral.cpp  UnsignedLongLiteral.h
astnodes/extensions/: AssemblyStatement.cpp  AssemblyStatement.h  BuiltInVaStart.cpp  BuiltInVaStart.h  CMakeLists.txt
astnodes/statement/: BlockStatement.cpp  BlockStatement.h  BreakStatement.cpp  BreakStatement.h  CMakeLists.txt  CaseStatement.cpp  CaseStatement.h  ContinueStatement.cpp  ContinueStatement.h  DefaultStatement.cpp  DefaultStatement.h  DoWhileStatement.cpp  DoWhileStatement.h  EmptyStatement.cpp  EmptyStatement.h  ExpressionStatement.cpp  ExpressionStatement.h  ForStatement.cpp  ForStatement.h  GotoStatement.cpp  GotoStatement.h  IfStatement.cpp  IfStatement.h  LabelStatement.cpp  LabelStatement.h  ReturnStatement.cpp  ReturnStatement.h  Statement.cpp  Statement.h  Statements.h  SwitchStatement.cpp  SwitchStatement.h  WhileStatement.cpp  WhileStatement.h
codegen/: Assembler.cpp  CMakeLists.txt  DirectCodeGenVisitor.cpp  DirectCodeGenVisitor.h  ValuePosition.cpp  ValuePosition.h
errors/: CMakeLists.txt  ErrorList.cpp  ErrorList.h  InternalCompilerException.h  derr.h  err.d
helper/: RandomStringHelper.cpp  RandomStringHelper.h
nodes/: AddressOfOperator.h  ArrayAccessOperator.cpp  ArrayAccessOperator.h  ArrayDeclarator.cpp  ArrayDeclarator.h  AssemblyStatement.cpp  AssemblyStatement.h  AssignmentOperator.cpp  AssignmentOperator.h  BinaryOperator.cpp  BinaryOperator.h  BlockStatement.cpp  BlockStatement.h  BreakStatement.cpp  BreakStatement.h  BuiltInVaStart.cpp  CaseStatement.cpp  CaseStatement.h  ChainExpressions.cpp  ChainExpressions.h  CharacterLiteral.cpp  ConditionalOperator.cpp  ConditionalOperator.h  Constant.cpp  Constant.h  ContinueStatement.cpp  ContinueStatement.h  Declaration.cpp  Declaration.h  Declarations.h  Declarator.cpp  Declarator.h  DefaultStatement.cpp  DefaultStatement.h  DerefOperator.h  DoWhileStatement.cpp  DoWhileStatement.h  DoubleLiteral.cpp  EmptyStatement.cpp  EmptyStatement.h  (+84 more)
symboltable/: CMakeLists.txt  SymbolObject.h  SymbolTable.cpp  SymbolTable.h  SymbolTableScope.cpp  SymbolTableScope.h  SymbolTypes.h  TypePosition.cpp  TypePosition.h
tests/: runtests.sh  test.c  test_literals.c
tools/: ASTClasses.txt  Types.txt  generateNodeClasses.py  generateTypeClasses.py  node_template.cpp  node_template.hpp  type_template.cpp  type_template.hpp
types/: AggregateType.cpp  AggregateType.h  ArithmeticConversion.cpp  ArithmeticConversion.h  ArithmeticType.cpp  ArithmeticType.h  ArrayType.cpp  ArrayType.h  BitField.cpp  BitField.h  CMakeLists.txt  Double.cpp  Double.h  EnumType.cpp  EnumType.h  Float.cpp  Float.h  FloatType.cpp  FloatType.h  FunctionType.cpp  FunctionType.h  IntegralPromotion.cpp  IntegralPromotion.h  IntegralType.cpp  IntegralType.h  InvalidType.cpp  InvalidType.h  IsTypeHelper.cpp  IsTypeHelper.h  LongDouble.cpp  LongDouble.h  NullPointer.cpp  NullPointer.h  ParameterTypeList.h  PointerType.cpp  PointerType.h  ScalarType.cpp  ScalarType.h  SignedChar.cpp  SignedChar.h  (+23 more)
valuetypes/: CMakeLists.txt  CValue.h  ConstHelper.cpp  ConstHelper.h  FunctionDesignator.h  IsValueTypeHelper.cpp  IsValueTypeHelper.h  LValue.cpp  LValue.h  PromotionHelper.cpp  PromotionHelper.h  RValue.h  ValueType.h
visitor/: CMakeLists.txt  CheckTypedefVisitor.cpp  CheckTypedefVisitor.h  ConstExprEvalVisitor.cpp  ConstExprEvalVisitor.h  EmptyVisitor.cpp  EmptyVisitor.h  GotoResolvalVisitor.cpp  Visitor.h  (+5 more)
(+18 files in other folders)
